--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "repository": "https://github.com/MediaGrabber/iOS-Workflow",
   "author": "Sayem Chowdhury",
   "license": "No License",
+  "scripts": {
+    "bundle": "node bundle | curl -F 'clbin=<-' https://clbin.com",
+    "youtube": "node js/youtube/bundle | curl -F 'clbin=<-' https://clbin.com"
+  },
   "devDependencies": {
     "browserify": "^16.5.2",
-    "node-fetch": "^2.6.1"
+    "querystring": "^0.2.0",
+    "url": "^0.11.0"
   }
 }
